@startuml "observer pattern"
class "subject\n(=observable)"{
- observer
+ 등록함수()
+ 삭제함수()
+ 통보함수()(observer의 콜백함수를 포함)
}
class "observer\n(=listener)"{
    +콜백함수()
}
"subject\n(=observable)" .right.> "observer\n(=listener)"

"concrete_subject\n(=concrete_observable)" -up-|> "subject\n(=observable)"
"concrete_observer\n(=concrete_listener)" -up-|> "observer\n(=listener)"

@enduml
